Added animation for titles on SecurePass Pages

--- a/templates/SecurePass/home.html
+++ b/templates/SecurePass/home.html
@@ -7,7 +7,7 @@ SecurePass
 {% block body %}
 <main>
     <div class="content">
-        <p class="typewriter title">SecurePass</p>
+        <p class="title">SecurePass</p>
         <p class="text">
             SecurePass is free open-source password manager with cool design and password generator.
             <br>Just remember one key, using a lot of passwords.
@@ -29,8 +29,7 @@ SecurePass
         width: 100%;
         text-align: center;
         vertical-align:middle;
-
-        font-size: 4em;
+        font-size: 3em;
         color: #47ed87
     }
 
@@ -45,6 +44,21 @@ SecurePass
         background: #4d4d4d;
         width: 90%;
     }
-}
+
+    .type {
+        display: inline-block;
+        overflow: hidden;
+        white-space: nowrap;
+        animation: typing 1s steps(60, end), blink 1s step-end infinite;
+    }
+
+    @keyframes typing {
+        from {
+            width: 0%
+        }
+        to {
+            width: 100%;
+        }
+    }
 </style>
 {% endblock %}
