--- a/templates/MTools/update.html
+++ b/templates/MTools/update.html
@@ -1,14 +1,14 @@
 {% extends 'bases/MTools.html' %}
 
 {% block title %}
-Update P1MT
+Update MTools
 {% endblock %}
 
 {% block body %}
 <main>
     <div class="form">
         <form action="/MTools/upload" enctype="multipart/form-data" method="POST">
-            <p>Update P1MT</p>
+            <p>Update MTools</p>
             <input class="inp" name="file" type="file"/>
             <br><input class="inp" name="key" placeholder="Write key">
             <br><input class="inp" name="version_code" placeholder="Write version code">
