--- a/templates/SecurePass/update.html
+++ b/templates/SecurePass/update.html
@@ -8,8 +8,7 @@ Update SecurePass
 <main>
     <div class="form">
         <p class="type">Update SecurePass</p>
-        <form action="/P1MT/upload" enctype="multipart/form-data" method="POST">
-
+        <form action="/SecurePass/upload" enctype="multipart/form-data" method="POST">
             <input class="inp" name="file" type="file"/>
             <br><input class="inp" name="key" placeholder="Write key">
             <br><input class="inp" name="version_code" placeholder="Write version code">
