--- a/templates/SecurePass/home.html
+++ b/templates/SecurePass/home.html
@@ -7,7 +7,7 @@ SecurePass
 {% block body %}
 <main>
     <div class="content">
-        <p class="title">SecurePass</p>
+        <p class="title type">SecurePass</p>
         <p class="text">
             SecurePass is free open-source password manager with cool design and password generator.
             <br>Just remember one key, using a lot of passwords.
