Refactoring pages and files
In this commit we refactored few pages, updated code and also updated requirements.

--- a/templates/MTools/update.html
+++ b/templates/MTools/update.html
@@ -29,9 +29,9 @@ Update MTools
         color: #C82A1E;
 
         position: absolute;
-    	top: 50%;
-    	left: 50%;
-    	transform: translateX(-50%) translateY(-50%);
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
     }
 
     .inp {
@@ -43,8 +43,7 @@ Update MTools
         width: 18em;
         height: 4em;
 
-        padding: 12px;
-        padding-bottom: 8px;
+        padding: 12px 12px 8px;
         margin: 10px;
     }
 
