--- a/templates/bases/MTools.html
+++ b/templates/bases/MTools.html
@@ -14,7 +14,7 @@
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" rel="stylesheet">
 
     <!--  Google Fonts  -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
     <!-- Set favicon -->
@@ -71,10 +71,6 @@
     }
 
     body::-webkit-scrollbar-thumb {
-        background: #1A2A33;
-    }
-
-    body::-webkit-scrollbar-hover {
         background: #1A2A33;
     }
 
