--- a/templates/MTools/download.html
+++ b/templates/MTools/download.html
@@ -62,7 +62,7 @@ MTools
 
     .version {
         position: absolute;
-        bottom: 0%;
+        bottom: 0;
         left: 50%;
         margin-right: -50%;
         transform: translate(-50%, -50%);
