--- a/templates/P1MT/update.html
+++ b/templates/P1MT/update.html
@@ -29,22 +29,21 @@ Update P1MT
         color: #C82A1E;
 
         position: absolute;
-    	top: 50%;
-    	left: 50%;
-    	transform: translateX(-50%) translateY(-50%);
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
     }
 
     .inp {
         color: #2C2C2C;
         background: #C82A1E;
         border: 0.3em solid #333;
-	  	border-radius: 8px;
+        border-radius: 8px;
 
         width: 18em;
         height: 4em;
 
-        padding: 12px;
-        padding-bottom: 8px;
+        padding: 12px 12px 8px;
         margin: 10px;
     }
 
