--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -9,7 +9,7 @@ Home
     <div class="background">
         <div class="content">
             <p>
-                Welcome to <b>merive_'s</b> site.
+                Welcome to <b>merive_</b>'s site.
                 <br>There you can discover about me, my projects and much more.
                 <br>Explore!
             </p>
