--- a/templates/main/links.html
+++ b/templates/main/links.html
@@ -14,8 +14,8 @@ Links
                 </b>
             </h2>
             <p>
-                In my GitHub, I work on my designs.
-                I make changes every day and try not to abandon my projects.
+                In my GitHub, I work on my projects.
+                I make changes in repositories every day and try not to leave my projects.
                 You can learn more about my projects on the <a href="/projects">My Projects page</a>.
             </p>
 
@@ -47,8 +47,8 @@ Links
                 </b>
             </h2>
             <p>
-                On my SO, I rarely help many peoples.
-                I'm active user on this community.
+                This is my StackOverflow account, I rarely help many peoples.
+                I'm active user of community.
             </p>
 
             <h2>
@@ -75,7 +75,7 @@ Links
 </main>
 
 <style>
-   main {
+    main {
         display: flex;
         flex-direction: column;
 
@@ -84,16 +84,16 @@ Links
         padding-bottom: 0.75em;
     }
 
-   .background {
+    .background {
         border: black solid 5px;
         border-radius: 10px;
         background: #333;
-   }
+    }
 
-   .content {
+    .content {
         color: #218b5f;
         margin: 0.5em 0.5em 0.5em 0.5em;
-   }
+    }
 
     p {
         font-size: 1.5em;
