--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -16,8 +16,8 @@ Projects
             </h2>
             <p>
                 My own Discord Bot.
-                He has a lot of functions, events, error handlers and much more!
-                Recently, I made global update, where I added much cool features.
+                He has a lot of functions, events, error handlers, slash commands and much more!
+                Parzibot often gets a lot of features
                 He got even better.
             </p>
 
@@ -47,14 +47,14 @@ Projects
 
             <h2>
                 <b>
-                    <a href="/P1MT">Press1MTimes (P1MT)</a>
+                    <a href="/P1MT">Press1MTimes</a>
                 </b>
             </h2>
             <p>
-                A cool Android clicker with a cool update coming soon.
+                A cool Android clicker with a cool design and features.
                 A simple game in which the main task is to find out what happens after a million clicks on the red
                 button...
-                Cool project with cool design and idea.
+                Good simple project.
             </p>
 
             <h2>
@@ -73,7 +73,7 @@ Projects
 </main>
 
 <style>
-     main {
+    main {
         display: flex;
         flex-direction: column;
 
@@ -86,12 +86,12 @@ Projects
         border: black solid 5px;
         border-radius: 10px;
         background: #333;
-   }
+    }
 
-   .content {
+    .content {
         color: #218b5f;
         margin: 0.5em 0.5em 0.5em 0.5em;
-   }
+    }
 
     p {
         font-size: 1.5em;
