--- a/templates/bases/main.html
+++ b/templates/bases/main.html
@@ -41,7 +41,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link" href="/projects" style="color: #218b5f !important">Projects</a>
-                <a class="nav-link" href="/LinuxSetup" style="color: #218b5f !important">Setup</a>
+                <a class="nav-link" href="/LinuxSetup" style="color: #218b5f !important">LinuxSetup</a>
                 <a class="nav-link" href="/links" style="color: #218b5f !important">Links</a>
                 <a class="nav-link" href="/about" style="color: #218b5f !important">About</a>
             </div>
