--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -10,7 +10,7 @@ About
         <div class="content">
             <h2 class="label"><b>Start</b></h2>
             <p>
-                Hello, I'm Max aka merive_, I'm programmer.
+                Hello, I'm Max aka merive_ and I'm programmer.
                 I write on Python, Java, HTML/CSS, C/Assembler, etc.
                 I don’t remember how it all began, but I came to programming in the summer of 2019, then I began to
                 study Python...
@@ -42,20 +42,21 @@ About
                 I met with Linux in October, 2020.
                 Now, Linux Distributions is most liked OS.
                 I like privacy, freedom and all advantages of Linux.
-                And Linux Bash is cool thing for programmer.
+                And Linux Bash is a cool powerful thing, both for a programmer and for anyone who loves computers.
             </p>
             <h2 class="label"><b>C/Assembler</b></h2>
             <p>
                 I started study C/Assembler as cool theme for ethnic hacking in November, 2020.
                 C/Assembler is hard languages, but interesting.
-                I little write on this languages, but I think to do cool programs on C/Assembler.
+                I little write on this languages, but I think to do interesting programs on C/Assembler for fun.
             </p>
             <h2 class="label"><b>Now</b></h2>
             <p>
                 Now, Programming is part of my life.
                 Everyday I write code, this is my hobby, my work and narcotic.
                 I will be make cool things, study more theme, languages.
-                I like code and all and all the related things with him.
+                I like code and all the related things with him.
+                Even after two years, I still love to write code.
             </p>
         </div>
     </div>
