--- a/templates/LinuxSetup/add.html
+++ b/templates/LinuxSetup/add.html
@@ -20,6 +20,13 @@ Add LinuxSetup
 </main>
 
 <style>
+    main {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 2em;
+    }
+
     p {
         font-size: 2em;
         color: #d77020;
@@ -30,11 +37,6 @@ Add LinuxSetup
     .form {
         text-align: center;
         color: #d77020;
-
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
     }
 
     .inp {
