--- a/templates/MTools/download.html
+++ b/templates/MTools/download.html
@@ -17,10 +17,17 @@ MTools
 </main>
 
 <style>
+    main {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 2em;
+    }
+
     .title {
         width: 100%;
         text-align: center;
-        vertical-align:middle;
+        vertical-align: middle;
         padding-top: 3%;
 
         font-size: 3em;
@@ -33,11 +40,9 @@ MTools
     }
 
     .btns {
-        position: absolute;
-        top: 60%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
+        text-align: center;
+        vertical-align: middle;
+        padding-top: 25%;
     }
 
     .btn {
@@ -61,18 +66,14 @@ MTools
     }
 
     .version {
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
+        text-align: center;
+        vertical-align: middle;
+        padding-top: 25%;
 
         font-size: 1.5em;
         color: #BBE1FA;
 
         width: 100%;
-        text-align: center;
-        vertical-align:middle;
     }
 
 </style>
