--- a/templates/P1MT/update.html
+++ b/templates/P1MT/update.html
@@ -19,6 +19,13 @@ Update P1MT
 </main>
 
 <style>
+    main {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 2em;
+    }
+
     p {
         font-size: 2.75em;
         color: #C82A1E;
@@ -27,11 +34,6 @@ Update P1MT
     .form {
         text-align: center;
         color: #C82A1E;
-
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
     }
 
     .inp {
