--- a/templates/MTools/update.html
+++ b/templates/MTools/update.html
@@ -19,19 +19,21 @@ Update MTools
 </main>
 
 <style>
+    main {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 2em;
+    }
+
     p {
-        font-size: 3em;
+        font-size: 2.75em;
         color: #BBE1FA;
     }
 
     .form {
         text-align: center;
-        color: #C82A1E;
-
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
+        color: #1A2A33;
     }
 
     .inp {
