--- a/templates/bases/main.html
+++ b/templates/bases/main.html
@@ -54,8 +54,8 @@
 </body>
 <style>
     body {
-        animation: animateBg 10s linear infinite;
-        background-image: linear-gradient(45deg, #286334, #218b5f, #327a70, #218b5f, #286334);
+        animation: animateBg 10s alternate infinite;
+        background-image: linear-gradient(45deg, #286334, #218b5f, #327a70);
         background-size: 100% 1100%;
         height: 100vh;
         width: 100vw;
