--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -18,9 +18,16 @@ Home
 </main>
 
 <style>
-    main {
+  main {
         font-family: 'Orbitron', sans-serif;
         color: black;
+
+        display: flex;
+        flex-direction: column;
+
+        padding-left: 7%;
+        padding-right: 7%;
+        padding-top: 15%;
     }
 
     p {
@@ -32,12 +39,6 @@ Home
     }
 
     .background {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
-        width: 90%;
-
         border: black solid 5px;
         border-radius: 10px;
         background: #333;
