--- a/templates/bases/MTools.html
+++ b/templates/bases/MTools.html
@@ -54,12 +54,25 @@
 </body>
 <style>
     body {
-        background-image: linear-gradient(to left, #1A2A33, #0F4B72);
+        animation: animateBg 10s alternate infinite;
+        background-image: linear-gradient(45deg, #1A2A33, #0F4B72);
+        background-size: 100% 1100%;
+        height: 100vh;
+        width: 100vw;
 
         font-family: 'Roboto', sans-serif;
         font-size: 16px;
 
         padding-top: 70px;
+    }
+
+    @keyframes animateBg {
+        0% {
+            background-position: 0 0;
+        }
+        100% {
+            background-position: 0 100%;
+        }
     }
 
     body::-webkit-scrollbar {
