--- a/templates/bases/main.html
+++ b/templates/bases/main.html
@@ -63,6 +63,7 @@
         font-family: 'Montserrat', sans-serif;
 
         padding-top: 70px;
+        overflow-x: hidden;
     }
 
     @keyframes animateBg {
