--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -18,16 +18,16 @@ Home
 </main>
 
 <style>
-  main {
+    main {
         font-family: 'Orbitron', sans-serif;
         color: black;
 
         display: flex;
-        flex-direction: column;
+        align-items: center;
+        justify-content: center;
 
-        padding-left: 7%;
-        padding-right: 7%;
-        padding-top: 15%;
+        padding: 6%;
+        height: 90%;
     }
 
     p {
@@ -46,7 +46,7 @@ Home
 
     .content {
         color: #218b5f;
-        margin: 0.5em 0.5em 0.5em 0.5em;
+        margin: 1.5em;
     }
 </style>
 {% endblock %}
