--- a/templates/bases/MTools.html
+++ b/templates/bases/MTools.html
@@ -30,7 +30,7 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"></script>
 
 <!--  Navbar code  -->
-<nav class="navbar fixed-top navbar-dark" style="background-color: #333">
+<nav class="navbar fixed-top navbar-dark" style="background-color: #1A2A33">
     <div class="container-fluid">
         <a class="navbar-brand" href="/MTools" style="color: #BBE1FA !important">MTools</a>
         <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
@@ -64,6 +64,7 @@
         font-size: 16px;
 
         padding-top: 70px;
+        overflow-x: hidden;
     }
 
     @keyframes animateBg {
