--- a/templates/MTools/download.html
+++ b/templates/MTools/download.html
@@ -19,9 +19,8 @@ MTools
 <style>
     main {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 2em;
+        flex-direction: column;
+        margin: 5%;
     }
 
     .title {
@@ -42,7 +41,7 @@ MTools
     .btns {
         text-align: center;
         vertical-align: middle;
-        padding-top: 25%;
+        margin: 5%;
     }
 
     .btn {
@@ -68,7 +67,7 @@ MTools
     .version {
         text-align: center;
         vertical-align: middle;
-        padding-top: 25%;
+        margin-top: 5%;
 
         font-size: 1.5em;
         color: #BBE1FA;
