--- a/templates/P1MT/update.html
+++ b/templates/P1MT/update.html
@@ -23,23 +23,23 @@ Update P1MT
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: 2em;
+        margin: 5%;
     }
 
     p {
-        font-size: 2.75em;
-        color: #C82A1E;
+        font-size: 3em;
+        color: #AF251B;
     }
 
     .form {
         text-align: center;
-        color: #C82A1E;
+        color: #AF251B;
     }
 
     .inp {
         color: #2C2C2C;
-        background: #C82A1E;
-        border: 0.3em solid #333;
+        background: #AF251B;
+        border: 0.3em solid #2C2C2C;
         border-radius: 8px;
 
         width: 18em;
