--- a/templates/bases/P1MT.html
+++ b/templates/bases/P1MT.html
@@ -15,8 +15,7 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet">
 
     <!-- Set favicon -->
     <link href="{{ url_for('static', filename='p1mt.ico') }}" rel="shortcut icon">
@@ -31,19 +30,20 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"></script>
 
 <!--  Navbar code  -->
-<nav class="navbar fixed-top navbar-dark" style="background-color: #333">
+<nav class="navbar fixed-top navbar-dark" style="background-color: #AF251B">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/P1MT" style="color: #C82A1E !important">Press1MTimes</a>
+        <a class="navbar-brand" href="/P1MT" style="color: #2C2C2C !important; font-size: 24px">Press1MTimes</a>
         <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler" data-bs-target="#navbarNavAltMarkup" data-bs-toggle="collapse"
-                style="color: #C82A1E !important"
+                style="color: #2C2C2C !important"
                 type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="https://github.com/merive/Press1MTimes" style="color: #C82A1E !important">GitHub</a>
-                <a class="nav-link" href="/" style="color: #C82A1E !important">Back</a>
+                <a class="nav-link" href="https://github.com/merive/Press1MTimes"
+                   style="color: #2C2C2C !important; font-size: 20px">GitHub</a>
+                <a class="nav-link" href="/" style="color: #2C2C2C !important; font-size: 20px">Back</a>
             </div>
         </div>
     </div>
@@ -56,7 +56,7 @@
     body {
         background: #2C2C2C;
 
-        font-family: 'Poppins', sans-serif;
+        font-family: 'Odibee Sans', cursive;
         font-size: 16px;
 
         padding-top: 70px;
@@ -72,7 +72,7 @@
     }
 
     body::-webkit-scrollbar-thumb {
-        background: #C82A1E;
+        background: #AF251B;
     }
 
 </style>
