--- a/templates/LinuxSetup/add.html
+++ b/templates/LinuxSetup/add.html
@@ -22,9 +22,8 @@ Add LinuxSetup
 <style>
     main {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 2em;
+        flex-direction: column;
+        margin: 5%;
     }
 
     p {
