--- a/templates/MTools/update.html
+++ b/templates/MTools/update.html
@@ -21,9 +21,8 @@ Update MTools
 <style>
     main {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 2em;
+        flex-direction: column;
+        margin: 5%;
     }
 
     p {
