--- a/templates/P1MT/home.html
+++ b/templates/P1MT/home.html
@@ -9,9 +9,9 @@ Press1MTimes
     <p class="title">Press 1M Times</p>
     <div class="content" style="width: 100%">
         <div class="btn">
-            <div class="btn ecl1">
-                <div class="btn ecl2">
-                    <a class="btn text" href="/P1MT/download">DOWNLOAD</a>
+            <div class="ecl1">
+                <div class="ecl2">
+                    <a class="text" href="/P1MT/download">DOWNLOAD</a>
                 </div>
             </div>
         </div>
@@ -22,77 +22,60 @@ Press1MTimes
 <style>
     .title {
         font-size: 4em;
-        color: #C82A1E;
+        color: #AF251B;
 
         width: 100%;
         text-align: center;
-        vertical-align: middle;
         margin-top: 3%;
     }
 
     .btn {
         position: absolute;
-        top: 70%;
+        top: 65%;
         left: 50%;
-        margin-right: -50%;
+        padding: 0;
         transform: translate(-50%, -50%);
+        width: 13em;
+        height: 13em;
     }
 
     .ecl1 {
-        position: absolute;
-        top: 70%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
-
-        /* Ellipse 1 */
-        width: 14em;
-        height: 14em;
+        width: 13em;
+        height: 13em;
         border-radius: 50%;
 
-        background: #AF251B;
-        border: 5px solid #2C2C2C;
-        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
-        -webkit-text-stroke: 5px #2C2C2C;
+        border: 5px solid #AF251B;
     }
 
     .ecl2 {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
-
-        /* Ellipse 2 */
-        width: 12em;
-        height: 12em;
+        width: 11em;
+        height: 11em;
         border-radius: 50%;
 
-        background: #C82A1E;
-        border: 5px solid #2C2C2C;
-        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        border: 5px solid #AF251B;
     }
 
     .text {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
+        width: 100%;
+        height: 100%;
 
-        width: 7em;
-        height: 7em;
-
-        text-align: center;
-        vertical-align: middle;
-        padding-top: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         /* Text, font, size parameters */
         color: #AF251B;
-        font-family: 'Do Hyeon', sans-serif;
-        font-size: 2em;
+        font-family: 'Odibee Sans', cursive;
+        font-size: 2.3em;
         text-decoration: none;
-        -webkit-text-stroke: 2px #2C2C2C;
     }
 
     .text:hover {
@@ -102,15 +85,15 @@ Press1MTimes
 
     .version {
         position: absolute;
-        bottom: -1%;
+        bottom: 0;
         left: 0;
         width: 100%;
         text-align: center;
 
         vertical-align: middle;
 
-        font-size: 1.5em;
-        color: #C82A1E;
+        font-size: 1.7em;
+        color: #AF251B;
     }
 </style>
 {% endblock %}
