--- a/templates/SecurePass/update.html
+++ b/templates/SecurePass/update.html
@@ -22,10 +22,7 @@ Update SecurePass
     main {
         display: flex;
         flex-direction: column;
-
-        padding-left: 7%;
-        padding-right: 7%;
-        padding-bottom: 0.75em;
+        margin: 5%;
     }
 
     p {
