--- a/templates/P1MT/update.html
+++ b/templates/P1MT/update.html
@@ -13,7 +13,7 @@ Update P1MT
             <br><input class="inp" name="key" placeholder="Write key">
             <br><input class="inp" name="version_code" placeholder="Write version code">
             <br><input class="inp" type="submit"/>
-            <p style="font-size: 1em; ">{{ result }}</p>
+            <p style="font-size: 2em; ">{{ result }}</p>
         </form>
     </div>
 </main>
@@ -21,8 +21,7 @@ Update P1MT
 <style>
     main {
         display: flex;
-        align-items: center;
-        justify-content: center;
+        flex-direction: column;
         margin: 5%;
     }
 
