--- a/templates/bases/MTools.html
+++ b/templates/bases/MTools.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
     <!-- Set favicon -->
-    <link href="{{ url_for('static', filename='mtools.ico') }}" rel="shortcut icon">
+    <link href="{{ url_for('static', filename='MTools.ico') }}" rel="shortcut icon">
 </head>
 <body>
 <!-- Bootstrap JS -->
