--- a/templates/bases/Parzibot.html
+++ b/templates/bases/Parzibot.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 
     <!-- Set favicon -->
-    <link href="{{ url_for('static', filename='parzibot.ico') }}" rel="shortcut icon">
+    <link href="{{ url_for('static', filename='Parzibot.ico') }}" rel="shortcut icon">
 </head>
 <body>
 <!-- Bootstrap JS -->
