--- a/templates/bases/P1MT.html
+++ b/templates/bases/P1MT.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet">
 
     <!-- Set favicon -->
-    <link href="{{ url_for('static', filename='p1mt.ico') }}" rel="shortcut icon">
+    <link href="{{ url_for('static', filename='P1MT.ico') }}" rel="shortcut icon">
 </head>
 <body>
 <!-- Bootstrap JS -->
