--- a/templates/LinuxSetup/home.html
+++ b/templates/LinuxSetup/home.html
@@ -6,7 +6,7 @@ LinuxSetup
 
 {% block body %}
 <main>
-    <p class="title">Welcome to LinuxSetup! There you can explore setups by <b>
+    <p class="title">Welcome to LinuxSetup!<br>There you can explore setups by <b>
         <a href="https://reddit.com/user/merive_">merive_</a></b></p>
     <div class="background">
         <div class="content">
@@ -64,12 +64,12 @@ LinuxSetup
     a {
         font-family: 'Major Mono Display', monospace;
         color: #d77020;
-        text-decoration: none;
+        text-decoration: solid;
     }
 
     a:hover {
         color: #d77020;
-        text-decoration: none;
+        text-decoration: solid;
     }
 </style>
 {% endblock %}
