--- a/templates/P1MT/home.html
+++ b/templates/P1MT/home.html
@@ -6,8 +6,8 @@ Press1MTimes
 
 {% block body %}
 <main>
-    <p class="title">Press 1M Times</p>
     <div class="content" style="width: 100%">
+        <p class="title">Press 1M Times</p>
         <div class="btn">
             <div class="ecl1">
                 <div class="ecl2">
@@ -20,6 +20,13 @@ Press1MTimes
 </main>
 
 <style>
+    main {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 90%;
+    }
+
     .title {
         font-size: 4em;
         color: #AF251B;
