--- a/templates/MTools/download.html
+++ b/templates/MTools/download.html
@@ -19,15 +19,17 @@ MTools
 <style>
     main {
         display: flex;
-        flex-direction: column;
-        margin: 5%;
+        align-items: center;
+        justify-content: center;
+        height: 90%;
     }
 
     .title {
-        width: 100%;
+        margin: 0;
         text-align: center;
         vertical-align: middle;
-        padding-top: 3%;
+        padding-top: 5%;
+        padding-bottom: 5%;
 
         font-size: 3em;
         color: #BBE1FA;
@@ -35,13 +37,12 @@ MTools
 
     .content {
         text-align: center;
-        margin-top: 0.5em;
+        width: 100%;
     }
 
     .btns {
+        width: 100%;
         text-align: center;
-        vertical-align: middle;
-        margin: 5%;
     }
 
     .btn {
