--- a/templates/MTools/home.html
+++ b/templates/MTools/home.html
@@ -19,6 +19,7 @@ MTools
 <style>
     .content {
         text-align: center;
+        padding: 1%;
     }
 
     .title {
@@ -27,7 +28,7 @@ MTools
         vertical-align: middle;
         padding-top: 5%;
 
-        font-size: 3em;
+        font-size: 4em;
         color: #BBE1FA;
     }
 
