--- a/templates/bases/SecurePass.html
+++ b/templates/bases/SecurePass.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 
     <!-- Set favicon -->
-    <link href="{{ url_for('static', filename='securepass.ico') }}" rel="shortcut icon">
+    <link href="{{ url_for('static', filename='SecurePass.ico') }}" rel="shortcut icon">
 </head>
 <body>
 <!-- Bootstrap JS -->
@@ -41,8 +41,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="/SecurePass/download" style="color: #47ed87 !important">Download
-                    ({{ version }})</a>
+                <a class="nav-link" href="/SecurePass/download" style="color: #47ed87 !important">
+                    Download ({{ version }})
+                </a>
                 <a class="nav-link" href="https://github.com/merive/SecurePass"
                    style="color: #47ed87 !important">GitHub</a>
                 <a class="nav-link" href="/" style="color: #47ed87 !important">Back</a>
