--- a/templates/bases/SecurePass.html
+++ b/templates/bases/SecurePass.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link" href="/SecurePass/download" style="color: #47ed87 !important">
-                    Download ({{ version }})
+                    Download (<i>{{ version }}</i>)
                 </a>
                 <a class="nav-link" href="https://github.com/merive/SecurePass"
                    style="color: #47ed87 !important">GitHub</a>
