--- a/templates/bases/main.html
+++ b/templates/bases/main.html
@@ -91,5 +91,13 @@
         font-family: 'Orbitron', sans-serif;
         text-decoration: none;
     }
+
+    a:hover {
+        color: #333;
+        -webkit-text-fill-color: #333;
+        -webkit-text-stroke-width: .5px;
+        -webkit-text-stroke-color: #218b5f;
+    }
+
 </style>
 </html>
