Removed MTools download page
Updated requirements.txt

--- a/templates/MTools/home.html
+++ b/templates/MTools/home.html
@@ -9,7 +9,7 @@ MTools
     <div class="content">
         <p class="title">MTools</p>
         <p class="text">
-            Free open-source utilities for any task
+            Free open-source utilities for any task.
             <br>Use all program for any tasks.
             <br>Note, Calculator, Mail, Time, RRC and much more...
         </p>
@@ -17,6 +17,10 @@ MTools
 </main>
 
 <style>
+    main {
+        padding: 1%;
+    }
+
     .content {
         text-align: center;
         padding: 1%;
