--- a/templates/SecurePass/home.html
+++ b/templates/SecurePass/home.html
@@ -24,7 +24,7 @@ SecurePass
     .content {
         text-align: center;
         padding: 1%;
-        margin: 1%;
+        margin: auto;
     }
 
     .title {
