--- a/templates/SecurePass/update.html
+++ b/templates/SecurePass/update.html
@@ -22,7 +22,10 @@ Update SecurePass
     main {
         display: flex;
         flex-direction: column;
-        margin: 5%;
+        align-items: center;
+        justify-content: center;
+        padding: 5% 0 5% 0;
+        height: 90%;
     }
 
     p {
@@ -41,6 +44,7 @@ Update SecurePass
     .form {
         text-align: center;
         color: #47ed87;
+        margin: auto;
     }
 
     .inp {
