--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -41,6 +41,7 @@ Home
         border: black solid 5px;
         border-radius: 10px;
         background: #333;
+        margin: auto;
     }
 
     .content {
