--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -35,7 +35,7 @@ Projects
 
             <h2>
                 <b>
-                    <a href="https://github.com/merive/merive.com">merive.com</a>
+                    <a href="https://github.com/merive/merive-website">merive-website</a>
                 </b>
             </h2>
             <p>
