--- a/templates/main/error.html
+++ b/templates/main/error.html
@@ -41,6 +41,7 @@ Error {{ error_code }}
         border: black solid 5px;
         border-radius: 10px;
         background: #333;
+        margin: auto;
     }
 
     .content {
