Improved hover animation on main website pages

--- a/templates/bases/main.html
+++ b/templates/bases/main.html
@@ -93,10 +93,7 @@
     }
 
     a:hover {
-        color: #333;
-        -webkit-text-fill-color: #333;
-        -webkit-text-stroke-width: .5px;
-        -webkit-text-stroke-color: #218b5f;
+        text-shadow: 1px 1px 1px #333, 0 0 1em #218b5f, 0 0 0.1em #218b5f;
     }
 
 </style>
