Added Parzibot About page
Updated app.py and Parzibot base

--- a/templates/bases/Parzibot.html
+++ b/templates/bases/Parzibot.html
@@ -41,9 +41,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="{{ link }}" style="color: #000 !important">Add Bot on Server</a>
+                <a class="nav-link" href="{{ link }}" style="color: #000 !important">Add Parzibot on Server</a>
                 <a class="nav-link" href="https://github.com/merive/Parzibot"
                    style="color: #000 !important">GitHub</a>
+                <a class="nav-link" href="/Parzibot/about" style="color: #000 !important">About Parzibot</a>
                 <a class="nav-link" href="/" style="color: #000 !important">Back</a>
             </div>
         </div>
